# algormeter

./: .gitignore  AUTHORS  LICENSE  README.md  algoMeter.ipynb  algorMeter.ipynb  example1.py  example2.py  example3.py  example4.py  example5.py  example6.py  pyproject.toml  viewer.py
algormeter/: __init__.py  algormeter.py  perfprof.py
algormeter/algorithms/: __init__.py  algorithms.py
algormeter/kernel/: __init__.py  kernel.py
algormeter/libs/: DCJBKMLib.py  __init__.py  baseLib.py  coaxLib.py  covxLib.py  data.py  probLib.py
algormeter/tools/: counter.py  dbx.py
tests/: test_algoMeter.py  test_counter.py  test_kernel.py  test_minimize.py  test_solver.py
